working email alerts

--- a/helm/prometheus-operator/secrets.yaml
+++ b/helm/prometheus-operator/secrets.yaml
@@ -3,11 +3,15 @@ alertmanager:
         global:
             smtp_auth_username: ENC[AES256_GCM,data:he67eisGJkfxVpt5gMY4GD+zf7W1CUwTyD/z6Guj6qcOsyTM8gcPAiiGE8gNRwmJggt1/Ppf8mDoPLw3i0k=,iv:jmGeqeCuyusAsmwa5dGU4dx4xtuuL/TN/wGQc11gylI=,tag:v40FIQOcVVMC7SPq8Vlb8w==,type:str]
             smtp_auth_password: ENC[AES256_GCM,data:Owu+hnObwzx5BLfVAt4qS8IKi6XTZMkAM/xRI+A0AN6+0g6sc0SgMiSs+um3Z9KCWH8=,iv:bLRY8oQ/XYTNz8rskfTvNni+Rh+PUBcbz3IBNsRW1cM=,tag:Duxdam15bRPKBOujM7zrKA==,type:str]
+        receivers:
+        -   name: ENC[AES256_GCM,data:JBHxTCkzBA==,iv:UezapYwVzmHYCvoyte2xbKdDhkUpOeUnl+KX8tCv51o=,tag:I+1Aoj/9SBBaDH5VnIVxAA==,type:str]
+            email_configs:
+            -   to: ENC[AES256_GCM,data:nj9Gs1Uu0q/jAL12QUiKaA==,iv:e7bk+DyA6QzRqaP6XRaGBGD1INM3KxG+azV6qig6egg=,tag:utrvkZLx21L8xr1gdExjzw==,type:str]
 sops:
     kms: []
     gcp_kms: []
-    lastmodified: '2019-01-01T09:09:17Z'
-    mac: ENC[AES256_GCM,data:WBrttU6Cs6zo9cd38/54ElYbahFNgAX0WUKYsWvVc+bg3BQRbLqnUdW0jOw4aBwmHe1o3j7i1KQxHyOpgDvyy82IPsKOMTNqpjuWLRAfiGSM5Ckpj0KYYKlzjBbW3w41rx2A61qZOU3xZiBKYXq+r2DolxZJzjO42T6KecVhPP4=,iv:8GM4goI/JFBD5AoZct9NMSKQRyK5aDxl6nWdvZDj7ag=,tag:Gsfki0JGIoWN24MOFvLmKQ==,type:str]
+    lastmodified: '2019-01-02T00:05:24Z'
+    mac: ENC[AES256_GCM,data:7NJDwfDPMUFUCSfOAHegZnpk7WgcQ5771NWGss8fKQeu335NQb6+LGv89KRRACNXj4FYazJ1u5BupWjD0POKr5r6Glh8Oek6kz0TOFzrs5KnMc0ROPOAR0KO+XVGnSAgwCJbZa1PUYs47KqjVXI/dYD6MINTZ5Z3qEKxeOWtXic=,iv:bLaiv3Pldah+4rNYawC6IkYOgLsSVi0bImHoxX1yQSQ=,tag:mlmOLxIDHJHn2NOsIzPBmw==,type:str]
     pgp:
     -   created_at: '2019-01-01T09:09:17Z'
         enc: |
