--- a/helm/prometheus-operator/values.yaml
+++ b/helm/prometheus-operator/values.yaml
@@ -56,17 +56,44 @@ alertmanager:
   config:
     global:
       smtp_smarthost: smtp.mailgun.org:587
-      smtp_from: "Prometheus Alerting <noreply+prometheus-alerting@pistack.io>"
+      smtp_from: "Prometheus Alerting <alertmanager@devops.pistack.io>"
+      smtp_auth_username: alertmanager@devops.pistack.io
     route:
       receiver: default
       routes:
       - receiver: default
         match:
           alertname: DeadMansSwitch
+    receivers:
+    - name: default
+      email_configs:
+      - to: alerts@devops.pistack.io
+kubelet:
+  serviceMonitor:
+    https: true
+kubeControllerManager:
+  service:
+    selector:
+      k8s-app: null
+      component: kube-controller-manager
+kubeScheduler:
+  service:
+    selector:
+      k8s-app: null
+      component: kube-scheduler
 coreDns:
-  enabled: false
-kubeDns:
-  enabled: true
+  service:
+    selector:
+      k8s-app: kube-dns
+kubeEtcd:
+  service:
+    port: 2379
+    targetPort: 2379
+    selector:
+      k8s-app: null
+      component: etcd
+  serviceMonitor:
+    scheme: https
 grafana:
   enabled: false
   image:
