--- a/helm/prometheus-operator/values.yaml
+++ b/helm/prometheus-operator/values.yaml
@@ -17,7 +17,7 @@ prometheus:
       repository: carlosedp/prometheus
       tag: v2.6.0
     secrets:
-    - etcd-client-certs
+    - etcd-healthcheck-client-certs
     storageSpec:
       class: ""
       selector:
@@ -96,9 +96,9 @@ kubeEtcd:
       component: etcd
   serviceMonitor:
     scheme: https
-    caFile: /etc/prometheus/secrets/etcd-client-certs/ca.crt
-    certFile: /etc/prometheus/secrets/etcd-client-certs/etcd-client.crt
-    keyFile: /etc/prometheus/secrets/etcd-client-certs/etcd-client.key
+    caFile: /etc/prometheus/secrets/etcd-healthcheck-client-certs/ca.crt
+    certFile: /etc/prometheus/secrets/etcd-healthcheck-client-certs/healthcheck-client.crt
+    keyFile: /etc/prometheus/secrets/etcd-healthcheck-client-certs/healthcheck-client.key
 grafana:
   enabled: false
   image:
